--- a/src/components/projects/project-image.scss
+++ b/src/components/projects/project-image.scss
@@ -18,12 +18,16 @@
 
     .link-button {
       @include flex-center(row);
-      width: 240px;
+      width: 200px;
       height: 64px;
       border: 3px solid white;
       border-radius: $border-radius-button;
       background-color: $main-color;
       color: white;
+
+      @media only screen and (min-width: $xs) {
+        width: 240px;
+      }
 
       a {
         text-decoration: none;
